# mimalloc-mc

./: .gitignore  .gitmodules  CMakeLists.txt  alloc-override-osx.c  genmc.md  heap.c  init.c  mimalloc-atomic.h  mimalloc-internal.h  mimalloc-types.h  options.c  os.c  random.c  readme.md  segment.c  stats.c  test.sh
mimalloc/: mimalloc-internal.h  mimalloc-override.h  mimalloc-types.h  os.c  region.c  segment.c
mimalloc-custom/: alloc-aligned.c  alloc-posix.c  alloc.c  mimalloc-atomic.h  mimalloc-override.h  mimalloc-types.h  mimalloc.h  os.c  page.c  segment.c
test/: CMakeLists.txt  flags.h  macro.h  main.c  threads.c  unit.c
test/abandoned/: main.c
test/alloc_free/: main.c
test/alloc_free_exchange/: config.txt  main.c
test/alloc_free_mt/: config.txt  main.c
test/bitmap/: config.txt  main.c
test/nodeps/: threads.c
test/race_next/: main.c  mimalloc_rewrite.h
test/race_next/n_threads/: config.txt  main.c
test/race_next/one_thread/: config.txt  main.c
